
              pnmtopng: Fix array bound violation with = 256 colors and -alpha.

              pnmtopng: Fix array bound violation with > 256 alpha mask levels.

              pamtopfm: Fix wrong selection of default endianness.

              libnetpbm: Add pm_system_lp(), pm_system_vp().

              libnetpbm: pbm_readppminit: read PBM as maxval of 255, not 1.

              libnetpbm: Fix uninitialized variable in pnm_allocpamrown().

              Rename pamtooctave to pamtooctaveimg.

              Build: don't build pstopnm on system without unix process
              management.

              Build: put -l's after .o's in test links.

              Build: don't use 'uint' type.  Solaris 10 apparently doesn't
              have it.

              Build: Add missing <stdlib.h> to ppmrough.c.

07.06.26 BJH  Release 10.39.00

              Add pamtooctave.  Thanks Scott Pakin (scott@pakin.org).

              Add pamundice.

              fitstopnm: add -omaxval.

              pnmremap: add -norand.

              pbmtext: improve error messages about fonts.

              pamtofits: fix -min, -max.

              fitstopnm: fix BITPIX = -32.

              PAM_STRUCT_SIZE: cast pointer to ulong instead of uint.

              pamthreshold: fix totally bogus threshold selection with
              simple thresholding.

              Configure: do test compile for missing Libxml2 and too old
              Libxml2.

              Configure: fix bug detecting presence of libvga with
              Ldconfig.

              Configure: build properly for Mac OSX when user says
              libnetpbm will be in the default search path.

              Build: don't use 'uint' type.  Mac OSX apparently doesn't
              have it.

07.03.30 BJH  Release 10.38.0
    
              Add pamfixtrunc.

              pamtogif: Add -aspect.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamditherbw: Add -atkinson.
